      * Releases are now built on CircleCI and released automatically.
      * Java components now live in github.com/thought-machine/please-java. They are
        still released as part of Please in the same way as before, but there's no
        javac requirement to build it now.
    * please tool maven has a --graph flag that allows some integration
      with existing BUILD files.


Version 13.1.8
--------------

    * Corrected some cases where package() was not honoured correctly.


Version 13.1.7
--------------

    * Correctly check `data` attributes of rules during `plz query changes`.


Version 13.1.6
--------------

    * Fixed some spurious cache warnings.


Version 13.1.5
--------------

    * More robust property expansions in `plz tool maven`.


Version 13.1.4
--------------

    * Fixed python_wheel which in some subtle cases was not honouring `patch` correctly.


Version 13.1.3
--------------

    * :all and ... labels are explicitly banned in various contexts.
      This never actually worked, but the error messages are more useful now.
    * Various subrepo fixes.


Version 13.1.1
--------------

    * Some fixes to coverage output


Version 13.1.0
--------------

    * Test flakes now have more distinct treatment for multiple runs (#350)
    * Support for limited PEP-498 style f-strings in the BUILD grammar.
    * Added `plz query roots` which returns roots of a dependency graph expressed
      as a set of labels (i.e. the ones in the list that have no dependencies).
    * Some improvements to structure of plz-out/go and some fixes for protos.


Version 13.0.1
--------------

    * Minor fixes to Prometheus metrics and behave test runner.


Version 13.0.0
--------------

    * Can now start shared test workers in a similar way to shared build workers.
	* Worker protocol has been changed to JSON instead of protobuf. This isn't compatible
	  with older versions, but they shouldn't normally mix anyway.