@@ -446,11 +446,10 @@ def check_config(key:str, section:str='buildconfig', rule:str='', example:str='.
     return val
 
 
-def _test_size_and_timeout(size, timeout, labels):
-    """Resolves size and timeout arguments for a test. For Buck compatibility."""
+def _test_size_and_timeout(size, timeout, labels:list=[]):
+    """Resolves size and timeout arguments for a test."""
     if size:
-        labels = labels or []
-        labels.append(size)
+        labels += [size]
         if not timeout:
             timeout = _SIZE_TIMEOUTS.get(size, 0)
     if isinstance(timeout, str):
